--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,9 @@
   "name": "server",
   "version": "1.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=14 <15"
+  }
   "description": "",
   "main": "index.js",
   "scripts": {
